fixed z-index main-content

--- a/style.css
+++ b/style.css
@@ -196,6 +196,8 @@ a{
 }
 .main-section-content{
   max-width: 650px;
+  position: relative;
+  z-index: 13;
 }
 .main-section-content h1{
   font-weight: 500;  
